🧹 Limpeza final da raiz: organização profissional completa - Move arquivos de configuração para pasta config/ - Move scripts para pasta scripts/ - Remove arquivos duplicados e desnecessários - Cria configurações centralizadas (project.yml, jekyll.yml) - Atualiza package.json com novos caminhos - Remove pasta assets/js vazia - Atualiza README.md com nova estrutura - Implementa organização seguindo melhores práticas

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.html",
   "scripts": {
     "dev": "python3 -m http.server 8000",
-    "build": "node build.js build",
-    "build:clean": "node build.js clean",
-    "deploy": "./update-portfolio.sh",
-    "lint:html": "htmlhint index.html",
-    "lint:css": "stylelint assets/css/*.css",
-    "lint:js": "eslint src/**/*.js",
+    "build": "node scripts/build.js build",
+    "build:clean": "node scripts/build.js clean",
+    "deploy": "./scripts/update-portfolio.sh",
+    "lint:html": "htmlhint --config config/.htmlhintrc index.html",
+    "lint:css": "stylelint --config config/.stylelintrc.json assets/css/*.css",
+    "lint:js": "eslint --config config/.eslintrc.json src/**/*.js",
     "lint": "npm run lint:html && npm run lint:css && npm run lint:js",
-    "format": "prettier --write .",
+    "format": "prettier --config config/.prettierrc --write .",
     "test": "echo 'No tests specified'",
     "clean": "rm -rf _site .jekyll-cache dist",
     "serve": "bundle exec jekyll serve",
